# eag_v3

./: .gitignore  CLAUDE.md
.claude/: settings.local.json
SS1/research-clip-extension/: README.md  content.js  manifest.json  popup.css  popup.html  popup.js
SS2/audio-insight-gemini/: README.md  background.js  content.js  env.js  gemini.js  manifest.json  popup.css  popup.html  popup.js  recorder.html  recorder.js
SS3/market-pulse-agent/: README.md  agent.js  background.js  env.js  gemini.js  manifest.json  popup.css  popup.html  popup.js  tools.js
SS4/competitor-analysis-agent/: .gitignore  README.md  pyproject.toml
SS4/competitor-analysis-agent/agent/: run_agent.py
SS4/competitor-analysis-agent/dashboard_app/: dashboard.py  theme.py
SS5/market-aware-competitor-agent/: .env.example  PROMPT_EVAL.json  PROMPT_EVAL.md  README.md  pyproject.toml
SS5/market-aware-competitor-agent/agent/: market_config.py  prompt_eval.py  run_agent.py
SS5/market-aware-competitor-agent/dashboard_app/: dashboard.py
SS5/market-aware-competitor-agent/dashboard_app/sections/: comparison_table.py  competitor_cards.py  market_context.py  positioning.py
SS5/market-aware-competitor-agent/demo/: demo_prompt.md
SS5/market-aware-competitor-agent/markets/: global_default.json  india_b2c_interior.json  southeast_asia_fintech.json  us_enterprise_crm.json
SS5/market-aware-competitor-agent/mcp_server/: logging_setup.py  schemas.py  server.py
SS5/market-aware-competitor-agent/mcp_server/tools/: competitors_db.py  pdf_export.py  prefab_ui.py  web_research.py
(+11 files in other folders)
