[project]
name = "market-aware-competitor-agent"
version = "0.2.0"
description = "Market-aware competitor analysis agent: configurable market context + MCP server + Prefab UI dashboard."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "google-genai>=0.8.0",
    "prefab-ui>=0.15.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "tavily-python>=0.5.0",
    "ddgs>=6.0.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "filelock>=3.15.0",
    "reportlab>=4.2.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
]

[project.scripts]
competitor-mcp = "mcp_server.server:main"
competitor-agent = "agent.run_agent:main"
prompt-eval = "agent.prompt_eval:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server", "agent", "dashboard_app"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
